--- a/inst/lightable-0.0.1/lightable.css
+++ b/inst/lightable-0.0.1/lightable.css
@@ -20,7 +20,7 @@
   padding-top: 0.5em;
 }
 
-.lightable-minimal.lightable-hover tr:hover {
+.lightable-minimal.lightable-hover tbody tr:hover {
   background-color: #f5f5f5;
 }
 
@@ -39,7 +39,7 @@
   border-bottom: 1px solid #111111;
 }
 
-.lightable-classic.lightable-hover tr:hover {
+.lightable-classic.lightable-hover tbody tr:hover {
   background-color: #f5f5f5;
 }
 
@@ -67,7 +67,7 @@
   border-top: 1px solid #eeeeee;
 }
 
-.lightable-material.lightable-hover tr:hover {
+.lightable-material.lightable-hover tbody tr:hover {
   background-color: #f5f5f5;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .lightable-material.lightable-striped td {
-  border: 0px;
+  border: 0;
 }
 
 .lightable-material.lightable-striped thead tr:last-child th {
