--- a/inst/lightable-0.0.1/lightable.css
+++ b/inst/lightable-0.0.1/lightable.css
@@ -58,12 +58,15 @@
 }
 
 .lightable-material th {
-  padding: 0.8em;
-  background-color: #f5f5f5;
+  height: 56px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .lightable-material td {
-  padding: 0.8em;
+  height: 52px;
+  padding-left: 16px;
+  padding-right: 16px;
   border-top: 1px solid #eeeeee;
 }
 
@@ -81,4 +84,46 @@
 
 .lightable-material.lightable-striped thead tr:last-child th {
   border-bottom: 1px solid #ddd;
+}
+
+.lightable-material-dark {
+  min-width: 100%;
+  white-space: nowrap;
+  table-layout: fixed;
+  font-family: Roboto, sans-serif;
+  border: 1px solid #FFFFFF12;
+  border-collapse: collapse;
+  margin-bottom: 10px;
+  background-color: #363640;
+}
+
+.lightable-material-dark th {
+  height: 56px;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: #FFFFFF60;
+}
+
+.lightable-material-dark td {
+  height: 52px;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: #FFFFFF;
+  border-top: 1px solid #FFFFFF12;
+}
+
+.lightable-material-dark.lightable-hover tbody tr:hover {
+  background-color: #FFFFFF12;
+}
+
+.lightable-material-dark.lightable-striped tr:nth-child(even) {
+  background-color: #FFFFFF12;
+}
+
+.lightable-material-dark.lightable-striped td {
+  border: 0;
+}
+
+.lightable-material-dark.lightable-striped thead tr:last-child th {
+  border-bottom: 1px solid #FFFFFF12;
 }
