--- a/inst/lightable-0.0.1/lightable.css
+++ b/inst/lightable-0.0.1/lightable.css
@@ -11,9 +11,20 @@
   margin-bottom: 10px;
 }
 
+.lightable-minimal td {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.lightable-minimal th {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .lightable-minimal thead tr th {
   border-bottom: 2px solid black;
   empty-cells: hide;
+
 }
 
 .lightable-minimal tbody tr:first-child td {
@@ -35,12 +46,22 @@
   margin-bottom: 10px;
 }
 
+.lightable-classic td {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.lightable-classic th {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .lightable-classic thead tr:last-child th {
   border-bottom: 1px solid #111111;
 }
 
 .lightable-classic.lightable-hover tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color: #F9EEC1;
 }
 
 .lightable-classic.lightable-striped tr:nth-child(even) {
@@ -54,12 +75,22 @@
   margin-bottom: 10px;
 }
 
+.lightable-classic-2 td {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.lightable-classic-2 th {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .lightable-classic-2 thead tr:last-child th {
   border-bottom: 1px solid #111111;
 }
 
 .lightable-classic-2.lightable-hover tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color: #F9EEC1;
 }
 
 .lightable-classic-2.lightable-striped tr:nth-child(even) {
@@ -145,4 +176,36 @@
 
 .lightable-material-dark.lightable-striped thead tr:last-child th {
   border-bottom: 1px solid #FFFFFF12;
+}
+
+.lightable-paper {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.lightable-paper th {
+  color: #999;
+  vertical-align: bottom;
+  border-bottom: 1px solid #00000020;
+  line-height: 1.15em;
+  padding: 10px 5px;
+}
+
+.lightable-paper td {
+  vertical-align: middle;
+  border-bottom: 1px solid #00000010;
+  line-height: 1.15em;
+  padding: 7px 5px;
+}
+
+.lightable-paper.lightable-hover tbody tr:hover {
+  background-color: #F9EEC1;
+}
+
+.lightable-paper.lightable-striped tr:nth-child(even) {
+  background-color: #00000008;
+}
+
+.lightable-material-dark.lightable-striped td {
+  border: 0;
 }
