--- a/inst/lightable-0.0.1/lightable.css
+++ b/inst/lightable-0.0.1/lightable.css
@@ -47,6 +47,14 @@
   margin: 10px 5px;
 }
 
+.lightable-classic tfoot tr td {
+  border: 0;
+}
+
+.lightable-classic tfoot tr:first-child td {
+  border-top: 0.14em solid #111111;
+}
+
 .lightable-classic caption {
   color: #222222;
 }
@@ -68,16 +76,6 @@
   border-bottom: 0.10em solid #111111;
 }
 
-.lightable-classic tfoot tr td {
-  border: 0;
-}
-
-.lightable-classic tfoot tr:first-child td {
-  border-top: 0.14em solid #111111;
-}
-
-
-
 .lightable-classic.lightable-hover tbody tr:hover {
   background-color: #F9EEC1;
 }
@@ -88,8 +86,17 @@
 
 .lightable-classic-2 {
   border-top: 3px double #111111;
+  border-bottom: 3px double #111111;
   width: 100%;
   margin-bottom: 10px;
+}
+
+.lightable-classic-2 tfoot tr td {
+  border: 0;
+}
+
+.lightable-classic-2 tfoot tr:first-child td {
+  border-top: 3px double #111111;
 }
 
 .lightable-classic-2 caption {
@@ -135,6 +142,14 @@
   margin-bottom: 10px;
 }
 
+.lightable-material tfoot tr td {
+  border: 0;
+}
+
+.lightable-material tfoot tr:first-child td {
+  border-top: 1px solid #EEE;
+}
+
 .lightable-material th {
   height: 56px;
   padding-left: 16px;
@@ -175,6 +190,14 @@
   background-color: #363640;
 }
 
+.lightable-material-dark tfoot tr td {
+  border: 0;
+}
+
+.lightable-material-dark tfoot tr:first-child td {
+  border-top: 1px solid #FFFFFF12;
+}
+
 .lightable-material-dark th {
   height: 56px;
   padding-left: 16px;
@@ -210,6 +233,14 @@
   width: 100%;
   margin-bottom: 10px;
   color: #444;
+}
+
+.lightable-paper tfoot tr td {
+  border: 0;
+}
+
+.lightable-paper tfoot tr:first-child td {
+  border-top: 1px solid #00000020;
 }
 
 .lightable-paper thead tr:last-child th {
